Bug #45575
cephfs-journal-tool: incorrect read_offset after finding missing objects
% Done:
0%
Source:
Community (dev)
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Description
in JournalScanner::scan_events(), read_offset is not increased when find missing objects, that will lead to a wrong result.
Related issues
History
#1 Updated by Patrick Donnelly 6 months ago
- Tracker changed from Fix to Bug
- Subject changed from tools/cephfs: fix cephfs-journal-tool to cephfs-journal-tool: incorrect read_offset after finding missing objects
- Status changed from New to Fix Under Review
- Assignee set to yantao xue
- Target version set to v16.0.0
- Source set to Community (dev)
- Backport set to octopus,nautilus
- Regression set to No
- Severity set to 3 - minor
- Pull request ID set to 35096
#2 Updated by Patrick Donnelly 6 months ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler 5 months ago
- Copied to Backport #46959: octopus: cephfs-journal-tool: incorrect read_offset after finding missing objects added
#4 Updated by Nathan Cutler 5 months ago
- Copied to Backport #46960: nautilus: cephfs-journal-tool: incorrect read_offset after finding missing objects added
#5 Updated by Nathan Cutler 4 months ago
- Project changed from Ceph to CephFS
#6 Updated by Nathan Cutler 2 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".