cephfs-journal-tool: fix incorrect read_offset after finding missing objects in JournalScanner::scan_events(), read_offset is not increased after finding missing objects that will lead to a wrong result. The fix will update read_offset.

Fixes: https://tracker.ceph.com/issues/45575

Signed-off-by: Xue Yantao <jhonxue@tencent.com>